flux/clusters/infrastructure/base/longhorn/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: tailscale
  namespace: longhorn-system
spec:
  gatewayClassName: tailscale
  listeners:
  - hostname: longhorn-ui
    name: longhorn-ui-http
    port: 80
    protocol: HTTP
  - hostname: longhorn-ui
    name: longhorn-ui-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: longhorn-ui
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: longhorn-ui-ingress-longhorn-ui
  namespace: longhorn-system
spec:
  hostnames:
  - longhorn-ui
  parentRefs:
  - name: tailscale
    port: 443
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.0.0
  name: longhorn-ui-ingress-longhorn-ui-http
  namespace: longhorn-system
spec:
  hostnames:
  - longhorn-ui
  parentRefs:
  - name: tailscale
    port: 80
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 308
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
